--- a/Sergio_Gallardo_Jimenez_DESIN_TAREA6/pom.xml
+++ b/Sergio_Gallardo_Jimenez_DESIN_TAREA6/pom.xml
@@ -13,7 +13,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.maven.main.MavenMain</mainClass>
+                            <mainClass>com.maven.Main.MainInterfaz</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
